--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@
 ################################################################################
 
 /.vs
+/Webgentle.BookStoreCore/.vs/Webgentle.BookStoreCore/v16
+/Webgentle.BookStoreCore/Webgentle.BookStoreCore/obj
